fix api, store, page

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@tailwindcss/vite": "^4.1.16",
+    "@types/lodash": "^4.17.20",
     "antd": "^5.27.6",
     "axios": "^1.12.2",
+    "lodash": "^4.17.21",
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
     "react": "^19.1.1",
